# fastapi_UM

./: .env  .env_example  .gitignore  main.py  pyproject.toml
app/: crud.py  database.py  models.py  schemas.py  settings.py
templates/: email.html
tests/: test_main.py
